# Makefile.am -- Process this file with automake to produce Makefile.in
bin_PROGRAMS = picasso

_common_SOURCES	=	source/FileClass.h source/maestro_opcodes.h source/types.h
picasso_SOURCES	=	source/picasso_assembler.cpp source/picasso_frontend.cpp source/picasso.h $(_common_SOURCES)
picasso_CXXFLAGS	=


EXTRA_DIST = autogen.sh
